@@ -313,117 +313,4 @@ sub print_version {
 
 __END__
 
-=head1 NAME
-
-prove - Run tests through a TAP harness.
-
-=head1 USAGE
-
- prove [options] [files or directories]
-
-=head1 OPTIONS
-
-Boolean options
-
- -v,  --verbose     Print all test lines.
- -l,  --lib         Add 'lib' to the path for your tests (-Ilib).
- -b,  --blib        Add 'blib/lib' to the path for your tests (-Iblib/lib).
- -s,  --shuffle     Run the tests in random order.
- -c,  --color       Colored test output (default).  See TAP::Harness::Color.
-      --nocolor     Do not color test output.
- -f,  --failures    Only show failed tests.
- -m,  --merge       Merge test scripts' STDERR with their STDOUT.
- -r,  --recurse     Recursively descend into directories.
-      --reverse     Run the tests in reverse order.
- -q,  --quiet       Suppress some test output while running tests.
- -Q,  --QUIET       Only print summary results.
- -p,  --parse       Show full list of TAP parse errors, if any.
-      --directives  Only show results with TODO or SKIP directives.
- -T                 Enable tainting checks.
- -t                 Enable tainting warnings.
- -W                 Enable fatal warnings.
- -w                 Enable warnings.
- -h,  --help        Display this help
- -?,                Display this help
- -H,  --man         Longer manpage for prove
-
-Options which take arguments
-
- -I                 Library paths to include.
- -e,  --exec        Interpreter to run the tests ('' for compiled tests.)
-      --harness     Define test harness to use.  See TAP::Harness.
-      --formatter   Result formatter to use. See TAP::Harness.
- -a,  --archive     Store the resulting TAP into the specified archive file.
-
-=head2 Reading from C<STDIN>
-
-If you have a list of tests (or URLs, or anything else you want to test) in a
-file, you can add them to your tests by using a '-':
-
- prove - < my_list_of_things_to_test.txt
-
-See the C<README> in the C<examples> directory of this distribution.
-
-=head1 NOTES
-
-=head2 Default Test Directory
-
-If no files or directories are supplied, C<prove> looks for all files
-matching the pattern C<t/*.t>.
-
-=head2 Colored Test Output
-
-Specifying the C<--color> or C<-c> switch is the same as:
-
- prove --harness TAP::Harness::Color
-
-Colored test output is the default, but if output is not to a terminal, color
-is disabled.  You can override this by adding the C<--color> switch.
-
-=head2 C<--exec>
-
-Normally you can just pass a list of Perl tests and the harness will know how
-to execute them.  However, if your tests are not written in Perl or if you
-want all tests invoked exactly the same way, use the C<-e>, or C<--exec>
-switch:
-
- prove --exec '/usr/bin/ruby -w' t/
- prove --exec '/usr/bin/perl -Tw -mstrict -Ilib' t/
- prove --exec '/path/to/my/customer/exec'
-
-=head2 C<--merge>
-
-If you need to make sure your diagnostics are displayed in the correct
-order relative to test results you can use the C<--merge> option to
-merge the test scripts' STDERR into their STDOUT. 
-
-This guarantees that STDOUT (where the test results appear) and STDOUT
-(where the diagnostics appear) will stay in sync. The harness will
-display any diagnostics your tests emit on STDERR.
-
-Caveat: this is a bit of a kludge. In particular note that if anything
-that appears on STDERR looks like a test result the test harness will
-get confused. Use this option only if you understand the consequences
-and can live with the risk.
-
-=head1 PERFORMANCE
-
-Because of its design, C<TAP::Parser> collects more information than
-C<Test::Harness>.  However, the trade-off is sometimes slightly slower
-performance than when using the C<prove> utility which is bundled with
-L<Test::Harness>.  For small tests suites, this is usually not a problem.
-However, enabling the C<--quiet> or C<--QUIET> options can sometimes speed up
-the test suite, sometimes running faster than C<prove>.
-
-=head1 SEE ALSO
-
-C<prove>, which comes with L<Test::Harness> and whose code I've nicked in a
-few places (thanks Andy!).
-
-=head1 CAVEATS
-
-This is alpha code.  You've been warned.
-
-=cut
-
 # vim:ts=4:sw=4:et:sta
